fixed alignment in header, finished article section

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -36,6 +36,7 @@ li {
 
 .menu {
   grid-area: 1 / 2 / 2 / 3;
+  display: grid;
 }
 
 .menu ul {
@@ -98,6 +99,9 @@ li {
 .article {
   background-color: #bccbde;
   grid-area: 3 / 2 / 4 / 3;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -111,6 +115,7 @@ li {
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
